work on class generator

--- a/Testing/TestForge.DataGenerator.Test/TestForge.DataGenerator.Test.csproj
+++ b/Testing/TestForge.DataGenerator.Test/TestForge.DataGenerator.Test.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\TestForge.DataGenerator\TestForge.DataGenerator.csproj" />
+  </ItemGroup>
+
 </Project>
