remove test step

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,7 +24,5 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build
-    - name: Install dependencies
-      run: dotnet add package Newtonsoft.Json --version 13.0.3
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+#    - name: Test
+#      run: dotnet test --no-build --verbosity normal
