--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,5 +24,7 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build
+    - name: Test
+      run: dotnet test ./Testing/TestForge.DataGenerator.Test --no-build --verbosity normal
 #    - name: Test
 #      run: dotnet test --no-build --verbosity normal
